[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "Day_1/main.rs"

[[bin]]
name = "day2"
path = "Day_2/main.rs"

[[bin]]
name = "day3"
path = "Day_3/main.rs"

[[bin]]
name = "day4"
path = "Day_4/main.rs"

[[bin]]
name = "day5"
path = "Day_5/main.rs"

[[bin]]
name = "day6"
path = "Day_6/main.rs"

[[bin]]
name = "day7"
path = "Day_7/main.rs"

[[bin]]
name = "day8"
path = "Day_8/main.rs"

[[bin]]
name = "day9"
path = "Day_9/main.rs"

[[bin]]
name = "day10"
path = "Day_10/main.rs"

[dependencies]
good_lp = { version = "1.14.2", default-features = false, features = ["microlp"] }


